tests/snapshots/snapshots__snapshot_browse_mode_selection_moved.snap
---
source: tests/snapshots.rs
assertion_line: 33
expression: render_to_text(&terminal)
---
╭ Sessions (5) ────────────────────╮╭ test-project • gemini-2.5-pro • 0k tok ──────────────────────────────────────────╮
│  Claude Code  Apr 08             ││ You   08:00:00                                                                   │
│    test-project                  ││────────────────────────────────────────                                          │
│     main                        ││ Explain how async/await works in JavaScript                                      │
│    Fix the build error           ││                                                                                  │
│                                  ││ Assistant   08:00:05                                                             │
│  Copilot CLI  Apr 08             ││────────────────────────────────────────                                          │
│    myapp                         ││ Async/await is syntactic sugar over Promises.                                    │
│                                  ││ ╭─ javascript ───                                                                │
│  Gemini CLI  Apr 08              ││ │ async function fetchData() {                                                   │
│    test-project                  ││ │   const resp = await fetch('/api');                                            │
│    Explain how async/await works ││ │   return resp.json();                                                          │
│                                  ││ │ }                                                                              │
│  Codex CLI  Apr 08               ││ ╰─────                                                                           │
│    (unknown project)             ││ ▶ search_docs async await ✔                                                      │
│    Add error handling to the API ││                                                                                  │
│                                  ││                                                                                  │
│  OpenCode  Apr 08                ││                                                                                  │
│    dbproject                     ││                                                                                  │
│    Refactor database layer       ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
╰──────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────╯
 j/k navigate  •   Enter open  •   / search  •   f filter  •   ? help  •   q quit
