tests/snapshots/snapshots__snapshot_filter_panel.snap
---
source: tests/snapshots.rs
assertion_line: 102
expression: render_to_text(&terminal)
---
╭ Sessions (5) ────────────────────╮╭ test-project • claude-sonnet-4-20250514 • 0k tok ────────────────────────────────╮
│  Claude Code  Apr 08             ││ You   10:00:00                                                                   │
│    test-project                  ││────────────────────────────────────────                                          │
│     main                        ││ Fix the build error in main.rs                                                   │
│    Fix the build error           ││                                                                                  │
│                                  ││ Assistant   10:00:05                                                             │
│  Copilot CLI  Apr 08             ││────────────────────────────────────────                                          │
│    myapp                         ││ I'll fix the build error.                                                        │
│                                  ││ ▶ Read                                                                           │
│  Gemini CLI  Apr 08              ││                                                                                  │
│    test-project                  ││ Assistant   10:00:15                                                             │
│    Explain how async/await works ││────────────────────────────────────────                                          │
│                                  ││ He╭ Filter ──────────────────────────────╮                                       │
│  Codex CLI  Apr 08               ││ ╭─│Providers                             │                                       │
│    (unknown project)             ││ │ │  ◉ Claude Code                       │                                       │
│    Add error handling to the API ││ │ │  ◉ Copilot CLI                       │                                       │
│                                  ││ │ │  ◉ Gemini CLI                        │                                       │
│  OpenCode  Apr 08                ││ ╰─│  ◉ Codex CLI                         │                                       │
│    dbproject                     ││ Th│  ◉ OpenCode                          │                                       │
│    Refactor database layer       ││   │  ◉ Cursor                            │                                       │
│                                  ││   │                                      │                                       │
│                                  ││   │Filters                               │                                       │
│                                  ││   │  Project: (any)                      │                                       │
│                                  ││   │  From:    (any)                      │                                       │
│                                  ││   │  To:      (any)                      │                                       │
│                                  ││   │  ◯ Starred only                      │                                       │
│                                  ││   ╰──────────────────────────────────────╯                                       │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
╰──────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────╯
 j/k navigate  •   Space toggle  •   e edit  •   Ctrl+C clear  •   Esc close
