tests/snapshots/snapshots__snapshot_help_overlay.snap
---
source: tests/snapshots.rs
assertion_line: 74
expression: render_to_text(&terminal)
---
╭ Sessions (5) ────────────────────╮╭ test-project • claude-sonnet-4-20250514 • 0k tok ────────────────────────────────╮
│  Claude Code  Apr 08             │╭ Help ────────────────────────────────────────╮                                   │
│    test-project                  ││Browse Mode                                   │                                   │
│     main                        ││  j / Down  Next session                      │                                   │
│    Fix the build error           ││  k / Up    Previous session                  │                                   │
│                                  ││  Enter     Open session                      │                                   │
│  Copilot CLI  Apr 08             ││  g         Go to top                         │                                   │
│    myapp                         ││  G         Go to bottom                      │                                   │
│                                  ││  y         Show resume command               │                                   │
│  Gemini CLI  Apr 08              ││  s         Toggle star (bookmark)            │                                   │
│    test-project                  ││  /         Search conversations              │                                   │
│    Explain how async/await works ││  H         Toggle hybrid (semantic) search   │                                   │
│                                  ││  f         Open filter panel                 │                                   │
│  Codex CLI  Apr 08               ││  Tab       Switch focus                      │                                   │
│    (unknown project)             ││                                              │                                   │
│    Add error handling to the API ││View Mode                                     │                                   │
│                                  ││  j / Down  Scroll down                       │                                   │
│  OpenCode  Apr 08                ││  k / Up    Scroll up                         │                                   │
│    dbproject                     ││  Ctrl+D    Page down                         │                                   │
│    Refactor database layer       ││  Ctrl+U    Page up                           │                                   │
│                                  ││  g / G     Top / bottom                      │                                   │
│                                  ││  t         Toggle tool calls                 │                                   │
│                                  ││  e         Export session                    │                                   │
│                                  ││  y         Show resume command               │                                   │
│                                  ││  Esc       Back to list                      │                                   │
│                                  ││                                              │                                   │
│                                  ││Search Mode                                   │                                   │
│                                  ││  Type      Filter sessions                   │                                   │
│                                  ││  Tab       Toggle hybrid engine              │                                   │
│                                  ││  Enter     Open selected                     │                                   │
│                                  ││  Esc       Cancel search                     │                                   │
│                                  ││                                              │                                   │
│                                  ││Filter Panel                                  │                                   │
│                                  ││  j / k     Navigate items                    │                                   │
│                                  ││  Space     Toggle provider                   │                                   │
│                                  ││  e         Edit text field                   │                                   │
│                                  ││  Ctrl+C    Clear all filters                 │                                   │
│                                  ││  Esc / f   Close panel                       │                                   │
╰──────────────────────────────────╯╰──────────────────────────────────────────────╯───────────────────────────────────╯
 Esc close
