tests/snapshots/snapshots__snapshot_message_view_with_tool_calls.snap
---
source: tests/snapshots.rs
expression: render_to_text(&terminal)
---
╭ Sessions (5) ────────────────────╮╭ test-project • claude-sonnet-4-20250514 • 0k tok ────────────────────────────────╮
│  Claude Code  Apr 08             ││ You   10:00:00                                                                   │
│    test-project                  ││────────────────────────────────────────                                          │
│     main                        ││ Fix the build error in main.rs                                                   │
│    Fix the build error           ││                                                                                  │
│                                  ││ Assistant   10:00:05                                                             │
│  Copilot CLI  Apr 08             ││────────────────────────────────────────                                          │
│    myapp                         ││ I'll fix the build error.                                                        │
│                                  ││ ▼ Read                                                                           │
│  Gemini CLI  Apr 08              ││   {                                                                              │
│    test-project                  ││     "path": "main.rs"                                                            │
│    Explain how async/await works ││   }                                                                              │
│                                  ││                                                                                  │
│  Codex CLI  Apr 08               ││ Assistant   10:00:15                                                             │
│    (unknown project)             ││────────────────────────────────────────                                          │
│    Add error handling to the API ││ 💭  Thinking                                                                      │
│                                  ││   The build error is a missing semicolon.                                        │
│  OpenCode  Apr 08                ││ Here's the fix:                                                                  │
│    dbproject                     ││ ╭─ rust ───                                                                      │
│    Refactor database layer       ││ │ fn main() {                                                                    │
│                                  ││ │     println!("hello");                                                         │
│                                  ││ │ }                                                                              │
│                                  ││ ╰─────                                                                           │
│                                  ││ The issue was a missing semicolon.                                               │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
╰──────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────╯
 j/k scroll  •   t tool calls  •   e export  •   Esc back  •   ? help
