tests/snapshots/snapshots__snapshot_search_mode.snap
---
source: tests/snapshots.rs
assertion_line: 120
expression: render_to_text(&terminal)
---
╭ Sessions (5) ────────────────────╮╭ test-project • claude-sonnet-4-20250514 • 0k tok ────────────────────────────────╮
│  Claude Code  Apr 08             ││ You   10:00:00                                                                   │
│    test-project                  ││────────────────────────────────────────                                          │
│     main                        ││ Fix the build error in main.rs                                                   │
│    Fix the build error           ││                                                                                  │
│                                  ││ Assistant   10:00:05                                                             │
│  Copilot CLI  Apr 08             ││────────────────────────────────────────                                          │
│    myapp                         ││ I'll fix the build error.                                                        │
│                                  ││ ▶ Read main.rs ✔                                                                 │
│  Gemini CLI  Apr 08              ││                                                                                  │
│    test-project                  ││ Assistant   10:00:15                                                             │
│    Explain how async/await works ││────────────────────────────────────────                                          │
│                                  ││ Here's the fix:                                                                  │
│  Codex CLI  Apr 08               ││ ╭─ rust ───                                                                      │
│    (unknown project)             ││ │ fn main() {                                                                    │
│    Add error handling to the API ││ │     println!("hello");                                                         │
│                                  ││ │ }                                                                              │
│  OpenCode  Apr 08                ││ ╰─────                                                                           │
│    dbproject                     ││ The issue was a missing semicolon.                                               │
│    Refactor database layer       ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
╰──────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────╯
 / test█
